--- a/chatbot/data/nlu.yml
+++ b/chatbot/data/nlu.yml
@@ -89,3 +89,21 @@ nlu:
     - are you a human?
     - am I talking to a bot?
     - am I talking to a human?
+
+- intent: give_ingredients
+  examples: |
+    - i have [avocados](ingredient), [cheese](ingredients), [tomatoes](ingredient) and [bread](ingredient)
+    - [avocados](ingredient), [cheese](ingredients), [tomatoes](ingredient), [bread](ingredient)
+
+- intent: give_dietary_type
+  examples: |
+    - [no](dietary_type)
+    - i'm a [vegetarian](dietary_type)
+    - i follow a [vegan](dietary_type) diet
+    - give me [vegetarian](dietary_type) recipes
+
+- intent: give_cook_time
+  examples: |
+    - i have [15 min](cook_time)
+    - i want to cook for [1 hour](cook_time)
+    - give me recipes i can make in [30 min](cook_time)
