--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,4 +1,4 @@
-version: "2.0"
+version: "3.1"
 
 stories:
 
@@ -183,6 +183,70 @@ stories:
     - diet_type: vegetarian
   - slot_was_set:
     - diet_type: vegetarian
+  - slot_was_set:
+    - requested_slot: null
+  - active_loop: null
+  - action: utter_submit
+  - action: utter_recipe_slots
+  - action: action_recipe_search
+  - intent: goodbye
+  - action: utter_goodbye
+
+- story: interactive_story_1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: find_recipe
+  - action: recipe_form
+  - active_loop: recipe_form
+  - slot_was_set:
+    - requested_slot: ingredients
+  - slot_was_set:
+    - ingredients:
+      - potatoes
+      - peas
+  - slot_was_set:
+    - ingredients:
+      - potatoes
+      - peas
+  - slot_was_set:
+    - requested_slot: diet_type
+  - slot_was_set:
+    - diet_type: keto
+  - slot_was_set:
+    - diet_type: keto
+  - slot_was_set:
+    - requested_slot: null
+  - active_loop: null
+  - action: utter_submit
+  - action: utter_recipe_slots
+  - action: action_recipe_search
+  - intent: goodbye
+  - action: utter_goodbye
+
+- story: interactive_story_1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: find_recipe
+  - action: recipe_form
+  - active_loop: recipe_form
+  - slot_was_set:
+    - requested_slot: ingredients
+  - slot_was_set:
+    - ingredients:
+      - pork
+      - curry
+  - slot_was_set:
+    - ingredients:
+      - pork
+      - curry
+  - slot_was_set:
+    - requested_slot: diet_type
+  - slot_was_set:
+    - diet_type: no
+  - slot_was_set:
+    - diet_type: no
   - slot_was_set:
     - requested_slot: null
   - active_loop: null
