--- a/domain.yml
+++ b/domain.yml
@@ -37,7 +37,7 @@ forms:
     - diet_type
 responses:
   utter_greet:
-  - text: Hey! How are you?
+  - text: Hi, I’m Remy the recipe chatbot. Ask me for a recipe and go from there!
   utter_cheer_up:
   - image: https://i.imgur.com/nGF1K8f.jpg
     text: 'Here is something to cheer you up:'
@@ -52,7 +52,7 @@ responses:
   utter_submit:
   - text: I will now find recipes for you!
   utter_recipe_slots:
-  - text: Ok, you are a {diet_type} and have these ingredients- {ingredients}.
+  - text: Ok, you are a {diet_type} and have {ingredients}.
   utter_ask_continue:
   - text: Are you sure you want to stop the form?
   utter_ask_ingredients:
@@ -60,10 +60,10 @@ responses:
   utter_ask_diet_type:
   - text: What diet do you follow?
 actions:
-- utter_greet
 - utter_submit
-- action_recipe_search
 - utter_goodbye
+- utter_greet
+- action_recipe_search
 - utter_recipe_slots
 - utter_ask_continue
 - validate_recipe_form
